Move ErrorMessage to schemas package
