# cmd/rest/docs/swagger.yaml
@@ -1,12 +1,5 @@
 basePath: /api/v1
 definitions:
-  model.ErrorMessage:
-    properties:
-      message:
-        type: string
-      status:
-        type: integer
-    type: object
   model.Product:
     properties:
       createdAt:
@@ -40,6 +33,15 @@ definitions:
         type: string
       updatedAt:
         type: string
+    type: object
+  schema.ErrorMessage:
+    properties:
+      details:
+        type: string
+      message:
+        type: string
+      status:
+        type: integer
     type: object
   schema.NewProduct:
     properties:
@@ -107,11 +109,11 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/model.ErrorMessage'
+            $ref: '#/definitions/schema.ErrorMessage'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/model.ErrorMessage'
+            $ref: '#/definitions/schema.ErrorMessage'
       summary: Products list
       tags:
       - Products
@@ -136,11 +138,11 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/model.ErrorMessage'
+            $ref: '#/definitions/schema.ErrorMessage'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/model.ErrorMessage'
+            $ref: '#/definitions/schema.ErrorMessage'
       summary: Create product
       tags:
       - Products
@@ -165,15 +167,15 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/model.ErrorMessage'
+            $ref: '#/definitions/schema.ErrorMessage'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/model.ErrorMessage'
+            $ref: '#/definitions/schema.ErrorMessage'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/model.ErrorMessage'
+            $ref: '#/definitions/schema.ErrorMessage'
       summary: Get product
       tags:
       - Products
@@ -199,11 +201,11 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/model.ErrorMessage'
+            $ref: '#/definitions/schema.ErrorMessage'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/model.ErrorMessage'
+            $ref: '#/definitions/schema.ErrorMessage'
       summary: User list
       tags:
       - User
@@ -228,11 +230,11 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/model.ErrorMessage'
+            $ref: '#/definitions/schema.ErrorMessage'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/model.ErrorMessage'
+            $ref: '#/definitions/schema.ErrorMessage'
       summary: Create user
       tags:
       - User
@@ -257,15 +259,15 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/model.ErrorMessage'
+            $ref: '#/definitions/schema.ErrorMessage'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/model.ErrorMessage'
+            $ref: '#/definitions/schema.ErrorMessage'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/model.ErrorMessage'
+            $ref: '#/definitions/schema.ErrorMessage'
       summary: Get user
       tags:
       - User
