# internal/api/v1/products.go
@@ -4,6 +4,7 @@ import (
 	"strconv"
 	
 	"github.com/gin-gonic/gin"
+	"github.com/go-playground/validator/v10"
 	
 	log "github.com/Minerva-System/minerva-go/pkg/log"
 	model "github.com/Minerva-System/minerva-go/internal/model"
@@ -18,14 +19,14 @@ import (
 // @Produce   json
 // @Param     page    query    int    false    "page number (0 or more)"
 // @Success   200     {object}    []model.Product
-// @Failure   400     {object}    model.ErrorMessage
-// @Failure   500     {object}    model.ErrorMessage
+// @Failure   400     {object}    schema.ErrorMessage
+// @Failure   500     {object}    schema.ErrorMessage
 // @Router    /products [get]
 func (self *Server) GetProducts(ctx *gin.Context) {
 	page, err := strconv.ParseInt(ctx.DefaultQuery("page", "0"), 10, 64)
 	if err != nil || page < 0 {
 		log.Error("Could not parse page size")
-		ctx.JSON(400, model.ErrorMessage{
+		ctx.JSON(400, schema.ErrorMessage{
 			Status: 400,
 			Message: "Could not parse page index",
 		})
@@ -36,7 +37,7 @@ func (self *Server) GetProducts(ctx *gin.Context) {
 	conn, err := self.Collection.ProductsSvc.Get(ctx)
 	if err != nil {
 		log.Error("Failed to retrieve a products service worker: %v", err)
-		ctx.JSON(500, model.ErrorMessage{
+		ctx.JSON(500, schema.ErrorMessage{
 			Status: 500,
 			Message: "Could not connect to products service",
 		})
@@ -48,7 +49,7 @@ func (self *Server) GetProducts(ctx *gin.Context) {
 	response, err := client.Index(ctx, &rpc.PageIndex{ Index: &page })
 	if err != nil {
 		log.Error("Failed to retrieve product index: %v", err)
-		ctx.JSON(500, model.ErrorMessage{
+		ctx.JSON(500, schema.ErrorMessage{
 			Status: 500,
 			Message: "Could not connect to products service",
 		})
@@ -58,7 +59,7 @@ func (self *Server) GetProducts(ctx *gin.Context) {
 	res, err := model.Product{}.FromListMessage(response)
 	if err != nil {
 		log.Error("Could not parse retrieved products list: %v", err)
-		ctx.JSON(500, model.ErrorMessage{
+		ctx.JSON(500, schema.ErrorMessage{
 			Status: 500,
 			Message: "Could not parse retrieved products list",
 		})
@@ -74,9 +75,9 @@ func (self *Server) GetProducts(ctx *gin.Context) {
 // @Produce   json
 // @Param     id    path    string    true    "product UUID"
 // @Success   200     {object}    model.Product
-// @Failure   400     {object}    model.ErrorMessage
-// @Failure   404     {object}    model.ErrorMessage
-// @Failure   500     {object}    model.ErrorMessage
+// @Failure   400     {object}    schema.ErrorMessage
+// @Failure   404     {object}    schema.ErrorMessage
+// @Failure   500     {object}    schema.ErrorMessage
 // @Router    /products/{id} [get]
 func (self *Server) GetProduct(ctx *gin.Context) {
 	id := ctx.Param("id")
@@ -85,7 +86,7 @@ func (self *Server) GetProduct(ctx *gin.Context) {
 	conn, err := self.Collection.ProductsSvc.Get(ctx)
 	if err != nil {
 		log.Error("Failed to retrieve a products service worker: %v", err)
-		ctx.JSON(500, model.ErrorMessage{
+		ctx.JSON(500, schema.ErrorMessage{
 			Status: 500,
 			Message: "Could not connect to products service",
 		})
@@ -97,7 +98,7 @@ func (self *Server) GetProduct(ctx *gin.Context) {
 	response, err := client.Show(ctx, &rpc.EntityIndex { Index: id })
 	if err != nil {
 		log.Error("Failed to retrieve product %s: %v", id, err)
-		ctx.JSON(500, model.ErrorMessage{
+		ctx.JSON(500, schema.ErrorMessage{
 			Status: 500,
 			Message: "Could not retrieve product",
 		})
@@ -107,7 +108,7 @@ func (self *Server) GetProduct(ctx *gin.Context) {
 	res, err := model.Product{}.FromMessage(response)
 	if err != nil {
 		log.Error("Could not parse retrieved product: %v", err)
-		ctx.JSON(500, model.ErrorMessage{
+		ctx.JSON(500, schema.ErrorMessage{
 			Status: 500,
 			Message: "Could not parse retrieved product",
 		})
@@ -124,23 +125,35 @@ func (self *Server) GetProduct(ctx *gin.Context) {
 // @Produce   json
 // @Param     data    body        schema.NewProduct    true    "new product data"
 // @Success   201     {object}    model.Product
-// @Failure   400     {object}    model.ErrorMessage
-// @Failure   500     {object}    model.ErrorMessage
+// @Failure   400     {object}    schema.ErrorMessage
+// @Failure   500     {object}    schema.ErrorMessage
 // @Router    /products [post]
 func (self *Server) CreateProduct(ctx *gin.Context) {
 	var data schema.NewProduct
 	if err := ctx.BindJSON(&data); err != nil {
-		ctx.JSON(400, model.ErrorMessage{
+		ctx.JSON(400, schema.ErrorMessage{
 			Status: 400,
 			Message: "Could not parse data into JSON",
 		})
+	}
+
+	validate := validator.New()
+	if err := validate.Struct(data); err != nil {
+		errors := err.(validator.ValidationErrors)
+		log.Error("Error while validating data: %s", errors)
+		ctx.JSON(400, schema.ErrorMessage{
+			Status: 400,
+			Message: "Error while validating data",
+			Details: errors.Error(),
+		})
+		return
 	}
 
 	log.Debug("Retrieving a products service worker...")
 	conn, err := self.Collection.ProductsSvc.Get(ctx)
 	if err != nil {
 		log.Error("Failed to retrieve a products service worker: %v", err)
-		ctx.JSON(500, model.ErrorMessage{
+		ctx.JSON(500, schema.ErrorMessage{
 			Status: 500,
 			Message: "Could not connect to products service",
 		})
@@ -155,7 +168,7 @@ func (self *Server) CreateProduct(ctx *gin.Context) {
 	res, err := model.Product{}.FromMessage(response)
 	if err != nil {
 		log.Error("Error while creating product: %v", err)
-		ctx.JSON(500, model.ErrorMessage{
+		ctx.JSON(500, schema.ErrorMessage{
 			Status: 500,
 			Message: "Error while creating user",
 		})
