# internal/api/v1/user.go
@@ -4,6 +4,7 @@ import (
 	"strconv"
 
 	"github.com/gin-gonic/gin"
+	"github.com/go-playground/validator/v10"
 	
 	log "github.com/Minerva-System/minerva-go/pkg/log"
 	model "github.com/Minerva-System/minerva-go/internal/model"
@@ -18,14 +19,14 @@ import (
 // @Produce   json
 // @Param     page    query    int    false    "page number (0 or more)"
 // @Success   200     {object}    []model.User
-// @Failure   400     {object}    model.ErrorMessage
-// @Failure   500     {object}    model.ErrorMessage
+// @Failure   400     {object}    schema.ErrorMessage
+// @Failure   500     {object}    schema.ErrorMessage
 // @Router    /users [get]
 func (self *Server) GetUsers(ctx *gin.Context) {
 	page, err := strconv.ParseInt(ctx.DefaultQuery("page", "0"), 10, 64)
 	if err != nil || page < 0 {
 		log.Error("Could not parse page size")
-		ctx.JSON(400, model.ErrorMessage{
+		ctx.JSON(400, schema.ErrorMessage{
 			Status: 400,
 			Message: "Could not parse page index",
 		})
@@ -36,7 +37,7 @@ func (self *Server) GetUsers(ctx *gin.Context) {
 	conn, err := self.Collection.UserSvc.Get(ctx)
 	if err != nil {
 		log.Error("Failed to retrieve a user service worker: %v", err)
-		ctx.JSON(500, model.ErrorMessage{
+		ctx.JSON(500, schema.ErrorMessage{
 			Status: 500,
 			Message: "Could not connect to user service",
 		})
@@ -48,7 +49,7 @@ func (self *Server) GetUsers(ctx *gin.Context) {
 	response, err := client.Index(ctx, &rpc.PageIndex{ Index: &page })
 	if err != nil {
 		log.Error("Failed to retrieve user index: %v", err)
-		ctx.JSON(500, model.ErrorMessage{
+		ctx.JSON(500, schema.ErrorMessage{
 			Status: 500,
 			Message: "Could not connect to user service",
 		})
@@ -58,7 +59,7 @@ func (self *Server) GetUsers(ctx *gin.Context) {
 	res, err := model.User{}.FromListMessage(response)
 	if err != nil {
 		log.Error("Could not parse retrieved user list: %v", err)
-		ctx.JSON(500, model.ErrorMessage{
+		ctx.JSON(500, schema.ErrorMessage{
 			Status: 500,
 			Message: "Could not parse retrieved user list",
 		})
@@ -76,9 +77,9 @@ func (self *Server) GetUsers(ctx *gin.Context) {
 // @Produce   json
 // @Param     id    path    string    true    "user UUID"
 // @Success   200     {object}    model.User
-// @Failure   400     {object}    model.ErrorMessage
-// @Failure   404     {object}    model.ErrorMessage
-// @Failure   500     {object}    model.ErrorMessage
+// @Failure   400     {object}    schema.ErrorMessage
+// @Failure   404     {object}    schema.ErrorMessage
+// @Failure   500     {object}    schema.ErrorMessage
 // @Router    /users/{id} [get]
 func (self *Server) GetUser(ctx *gin.Context) {
 	id := ctx.Param("id")
@@ -87,7 +88,7 @@ func (self *Server) GetUser(ctx *gin.Context) {
 	conn, err := self.Collection.UserSvc.Get(ctx)
 	if err != nil {
 		log.Error("Failed to retrieve a user service worker: %v", err)
-		ctx.JSON(500, model.ErrorMessage{
+		ctx.JSON(500, schema.ErrorMessage{
 			Status: 500,
 			Message: "Could not connect to user service",
 		})
@@ -99,7 +100,7 @@ func (self *Server) GetUser(ctx *gin.Context) {
 	response, err := client.Show(ctx, &rpc.EntityIndex{ Index: id })
 	if err != nil {
 		log.Error("Failed to retrieve user %s: %v", id, err)
-		ctx.JSON(500, model.ErrorMessage{
+		ctx.JSON(500, schema.ErrorMessage{
 			Status: 500,
 			Message: "Could not retrieve user",
 		})
@@ -109,7 +110,7 @@ func (self *Server) GetUser(ctx *gin.Context) {
 	res, err := model.User{}.FromMessage(response)
 	if err != nil {
 		log.Error("Could not parse retrieved user: %v", err)
-		ctx.JSON(500, model.ErrorMessage{
+		ctx.JSON(500, schema.ErrorMessage{
 			Status: 500,
 			Message: "Could not parse retrieved user",
 		})
@@ -126,16 +127,29 @@ func (self *Server) GetUser(ctx *gin.Context) {
 // @Produce   json
 // @Param     data    body        schema.NewUser    true    "new user data"
 // @Success   201     {object}    model.User
-// @Failure   400     {object}    model.ErrorMessage
-// @Failure   500     {object}    model.ErrorMessage
+// @Failure   400     {object}    schema.ErrorMessage
+// @Failure   500     {object}    schema.ErrorMessage
 // @Router    /users [post]
 func (self *Server) CreateUser(ctx *gin.Context) {
 	var data schema.NewUser
 	if err := ctx.BindJSON(&data); err != nil {
-		ctx.JSON(400, model.ErrorMessage{
+		log.Error("Could not parse data into JSON")
+		ctx.JSON(400, schema.ErrorMessage{
 			Status: 400,
 			Message: "Could not parse data into JSON",
 		})
+	}
+
+	validate := validator.New()
+	if err := validate.Struct(data); err != nil {
+		errors := err.(validator.ValidationErrors)
+		log.Error("Error while validating data: %s", errors)
+		ctx.JSON(400, schema.ErrorMessage{
+			Status: 400,
+			Message: "Error while validating data",
+			Details: errors.Error(),
+		})
+		return
 	}
 
 	
@@ -143,7 +157,7 @@ func (self *Server) CreateUser(ctx *gin.Context) {
 	conn, err := self.Collection.UserSvc.Get(ctx)
 	if err != nil {
 		log.Error("Failed to retrieve a user service worker: %v", err)
-		ctx.JSON(500, model.ErrorMessage{
+		ctx.JSON(500, schema.ErrorMessage{
 			Status: 500,
 			Message: "Could not connect to user service",
 		})
@@ -158,7 +172,7 @@ func (self *Server) CreateUser(ctx *gin.Context) {
 	res, err := model.User{}.FromMessage(response)
 	if err != nil {
 		log.Error("Error while creating user: %v", err)
-		ctx.JSON(500, model.ErrorMessage{
+		ctx.JSON(500, schema.ErrorMessage{
 			Status: 500,
 			Message: "Error while creating user",
 		})
