# internal/schema/errors.go
@@ -1,0 +1,8 @@
+package schema
+
+type ErrorMessage struct {
+	Status int     `json:"status"`
+	Message string `json:"message"`
+	Details string `json:"details,omitempty"`
+}
+
